<?xml version="1.0"?>
<package format="3">
  <name>map_generator</name>
  <version>0.1.0</version>
  <description>PCD map publisher for SCAN-Planner simulation.</description>
  <maintainer email="bzhouai@todo.todo">SCAN-Planner maintainers</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
