<?xml version="1.0"?>
<package format="3">
  <name>mockamap</name>
  <version>0.1.0</version>
  <description>Procedural point-cloud map generator.</description>
  <maintainer email="William.Wu@todo.todo">William Wu</maintainer>
  <license>GPL-3.0-only</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rviz2</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
