<?xml version="1.0"?>
<package format="3">
  <name>odom_visualization</name>
  <version>0.1.0</version>
  <description>Odometry visualization and TF publisher.</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>armadillo</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pose_utils</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
