<?xml version="1.0"?>
<package format="3">
  <name>waypoint_generator</name>
  <version>0.1.0</version>
  <description>RViz goal to waypoint path converter.</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
